[package]
name = "console_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.10"
log = "0.4.29"
nanoid = "0.5.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
